--- a/app/src/main/res/layout/frame_group_create.xml
+++ b/app/src/main/res/layout/frame_group_create.xml
@@ -23,9 +23,21 @@
             android:gravity="center_vertical"
             android:orientation="horizontal">
 
+            <ImageView
+                android:layout_width="@dimen/dp_40"
+                android:layout_height="@dimen/dp_40"
+                android:layout_marginLeft="@dimen/dp_10"
+                android:layout_marginStart="@dimen/dp_10"
+                android:contentDescription="@string/content_description"
+                android:onClick="@{(view) -> viewModel.changeStateBottomSheet(view)}"
+                android:src="@drawable/ic_keyboard_arrow_up_white_24px"
+                />
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_marginLeft="@dimen/dp_10"
+                android:layout_marginStart="@dimen/dp_10"
                 android:gravity="center_vertical"
                 android:text="@string/create_group"
                 android:textColor="@android:color/white"
@@ -60,7 +72,8 @@
 
                 <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="match_parent"
+                    android:background="@drawable/border">
 
                     <android.support.design.widget.TextInputEditText
                         android:layout_width="match_parent"
@@ -92,7 +105,8 @@
 
                 <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="match_parent"
+                    android:background="@drawable/border">
 
                     <android.support.design.widget.TextInputEditText
                         android:layout_width="match_parent"
@@ -123,7 +137,8 @@
 
                 <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="match_parent"
+                    android:background="@drawable/border">
 
                     <android.support.design.widget.TextInputEditText
                         android:layout_width="match_parent"
@@ -154,7 +169,8 @@
 
                 <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="match_parent"
+                    android:background="@drawable/border">
 
                     <android.support.design.widget.TextInputEditText
                         android:layout_width="match_parent"
@@ -188,6 +204,7 @@
                 android:layout_marginRight="@dimen/dp_20"
                 android:layout_marginStart="@dimen/dp_20"
                 android:layout_weight="1"
+                android:background="@drawable/border"
                 android:gravity="center"
                 android:onClick="@{() -> viewModel.onCancelClick()}"
                 android:text="@string/cancel"
@@ -203,6 +220,7 @@
                 android:layout_marginRight="@dimen/dp_20"
                 android:layout_marginStart="@dimen/dp_20"
                 android:layout_weight="1"
+                android:background="@drawable/border"
                 android:gravity="center"
                 android:onClick="@{() -> viewModel.onCreateGroup()}"
                 android:text="@string/create"
