--- a/app/src/main/res/layout/frame_group_create.xml
+++ b/app/src/main/res/layout/frame_group_create.xml
@@ -135,7 +135,7 @@
 
                 <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:background="@drawable/border">
 
                     <android.support.design.widget.TextInputEditText
@@ -153,9 +153,8 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
+                android:layout_height="wrap_content"
                 android:layout_margin="@dimen/dp_10"
-                android:layout_weight="1"
                 android:orientation="vertical">
 
                 <TextView
