--- a/app/src/main/res/layout/frame_group_create.xml
+++ b/app/src/main/res/layout/frame_group_create.xml
@@ -8,6 +8,8 @@
         <variable
             name="viewModel"
             type="com.framgia.feastival.screen.main.creategroup.CreateGroupViewModel"/>
+
+        <import type="com.framgia.feastival.screen.main.creategroup.CreateGroupPresenter"/>
     </data>
 
     <LinearLayout
@@ -53,8 +55,7 @@
             android:layout_marginLeft="@dimen/dp_10"
             android:layout_marginRight="@dimen/dp_10"
             android:layout_marginStart="@dimen/dp_10"
-            android:orientation="vertical"
-            android:weightSum="4">
+            android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -111,11 +112,43 @@
                     <android.support.design.widget.TextInputEditText
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:hint="@string/email_address"
+                        android:hint="@string/enter_group_address"
                         android:imeOptions="actionDone"
                         android:inputType="text"
                         android:padding="@dimen/dp_10"
                         android:text="@={viewModel.address}"/>
+
+                </android.support.design.widget.TextInputLayout>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_margin="@dimen/dp_10"
+                android:layout_weight="1"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/time"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textSize="@dimen/sp_20"/>
+
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/border">
+
+                    <android.support.design.widget.TextInputEditText
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:hint="@{CreateGroupPresenter.timeFormat}"
+                        android:imeOptions="actionDone"
+                        android:inputType="datetime"
+                        android:padding="@dimen/dp_10"
+                        android:text="@={viewModel.time}"/>
 
                 </android.support.design.widget.TextInputLayout>
 
@@ -194,7 +227,6 @@
             android:layout_marginTop="@dimen/dp_15"
             android:orientation="horizontal"
             android:weightSum="2">
-
 
             <TextView
                 android:layout_width="0dp"
