--- a/app/src/main/res/layout/frame_group_create.xml
+++ b/app/src/main/res/layout/frame_group_create.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
     >
 
     <data>
@@ -59,9 +60,8 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
+                android:layout_height="wrap_content"
                 android:layout_margin="@dimen/dp_10"
-                android:layout_weight="1"
                 android:orientation="vertical">
 
                 <TextView
@@ -73,7 +73,7 @@
 
                 <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:background="@drawable/border">
 
                     <android.support.design.widget.TextInputEditText
@@ -91,10 +91,8 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
+                android:layout_height="wrap_content"
                 android:layout_margin="@dimen/dp_10"
-                android:layout_weight="1"
-
                 android:orientation="vertical">
 
                 <TextView
@@ -111,7 +109,7 @@
 
                     <android.support.design.widget.TextInputEditText
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_height="wrap_content"
                         android:hint="@string/enter_group_address"
                         android:imeOptions="actionDone"
                         android:inputType="text"
@@ -124,9 +122,8 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
+                android:layout_height="wrap_content"
                 android:layout_margin="@dimen/dp_10"
-                android:layout_weight="1"
                 android:orientation="vertical">
 
                 <TextView
@@ -170,12 +167,43 @@
 
                 <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:background="@drawable/border">
 
                     <android.support.design.widget.TextInputEditText
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="@{CreateGroupPresenter.timeFormat}"
+                        android:imeOptions="actionDone"
+                        android:inputType="datetime"
+                        android:padding="@dimen/dp_10"
+                        android:text="@={viewModel.time}"/>
+
+                </android.support.design.widget.TextInputLayout>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/dp_10"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/size"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textSize="@dimen/sp_20"/>
+
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/border">
+
+                    <android.support.design.widget.TextInputEditText
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
                         android:hint="@string/size_group"
                         android:imeOptions="actionDone"
                         android:inputType="number"
@@ -188,9 +216,8 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
+                android:layout_height="wrap_content"
                 android:layout_margin="@dimen/dp_10"
-                android:layout_weight="1"
                 android:orientation="vertical">
 
                 <TextView
@@ -200,21 +227,16 @@
                     android:textColor="@color/colorPrimaryDark"
                     android:textSize="@dimen/sp_20"/>
 
-                <android.support.design.widget.TextInputLayout
+                <Spinner
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:background="@drawable/border">
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/border"
+                    android:paddingBottom="@dimen/dp_15"
+                    android:paddingTop="@dimen/dp_15"
+                    app:spinnerAdapter="@{viewModel.spinnerAdapter}"
+                    >
+                </Spinner>
 
-                    <android.support.design.widget.TextInputEditText
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:hint="@string/category_group"
-                        android:imeOptions="actionDone"
-                        android:inputType="text"
-                        android:padding="@dimen/dp_10"
-                        android:text="@={viewModel.category}"/>
-
-                </android.support.design.widget.TextInputLayout>
             </LinearLayout>
         </LinearLayout>
 
