--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,37 +11,53 @@
 
     </data>
 
-    <android.support.design.widget.CoordinatorLayout
+    <android.support.v4.widget.DrawerLayout
+        android:id="@+id/drawer_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <fragment
-            android:id="@+id/map"
-            android:name="com.google.android.gms.maps.SupportMapFragment"
+        <android.support.design.widget.CoordinatorLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent">
 
-        <android.support.v4.widget.NestedScrollView
-            android:id="@+id/bottom_sheet"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/dp_300"
-            android:background="@android:color/white"
-            android:clipToPadding="true"
-            android:orientation="vertical"
-            app:layout_behavior="@string/bottom_sheet_behavior">
-
-            <android.support.design.widget.CoordinatorLayout
+            <fragment
+                android:id="@+id/map"
+                android:name="com.google.android.gms.maps.SupportMapFragment"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                app:state="@{viewModel}">
+                android:layout_height="match_parent"/>
 
-                <include
-                    layout="@layout/frame_restaurant_detail"
+            <android.support.v4.widget.NestedScrollView
+                android:id="@+id/bottom_sheet"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dp_300"
+                android:background="@android:color/white"
+                android:clipToPadding="true"
+                android:orientation="vertical"
+                app:layout_behavior="@string/bottom_sheet_behavior">
+
+                <android.support.design.widget.CoordinatorLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    />
-            </android.support.design.widget.CoordinatorLayout>
-        </android.support.v4.widget.NestedScrollView>
-    </android.support.design.widget.CoordinatorLayout>
+                    app:state="@{viewModel}">
+
+                    <include
+                        layout="@layout/frame_restaurant_detail"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        />
+                </android.support.design.widget.CoordinatorLayout>
+            </android.support.v4.widget.NestedScrollView>
+        </android.support.design.widget.CoordinatorLayout>
+
+        <android.support.design.widget.NavigationView
+            android:id="@+id/left_drawer"
+            android:layout_width="@dimen/dp_300"
+            android:layout_height="match_parent"
+            android:layout_gravity="start"
+            android:background="@android:color/white"
+            app:headerLayout="@layout/header"
+            app:menu="@menu/drawer"
+            />
+    </android.support.v4.widget.DrawerLayout>
 
 </layout>
