--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -13,4 +13,5 @@
     <dimen name="sp_20">20sp</dimen>
     <dimen name="dp_15">15dp</dimen>
     <dimen name="dp_60">60dp</dimen>
+    <dimen name="dp_150">150dp</dimen>
 </resources>
