--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,15 +3,20 @@
     <dimen name="dp_30">30dp</dimen>
     <dimen name="dp_20">20dp</dimen>
     <dimen name="dp_10">10dp</dimen>
-    <dimen name="sp_15">15sp</dimen>
     <dimen name="dp_5">5dp</dimen>
     <dimen name="dp_1">1dp</dimen>
     <dimen name="sp_50">50sp</dimen>
     <dimen name="dp_300">300dp</dimen>
     <dimen name="dp_50">50dp</dimen>
     <dimen name="dp_40">40dp</dimen>
+    <dimen name="sp_15">15sp</dimen>
     <dimen name="sp_20">20sp</dimen>
+    <dimen name="sp_25">25sp</dimen>
     <dimen name="dp_15">15dp</dimen>
     <dimen name="dp_60">60dp</dimen>
     <dimen name="dp_150">150dp</dimen>
+    <dimen name="dp_120">120dp</dimen>
+    <dimen name="dp_80">80dp</dimen>
+    <dimen name="dp_200">200dp</dimen>
+    <dimen name="dp_250">250dp</dimen>
 </resources>
