--- a/app/src/main/res/values/integers.xml
+++ b/app/src/main/res/values/integers.xml
@@ -4,4 +4,5 @@
     <integer name="span_count">4</integer>
     <integer name="bottom_sheet_expand_restaurant_detail">1000</integer>
     <integer name="bottom_sheet_expand_create_group">1400</integer>
+    <integer name="max_lines_address">3</integer>
 </resources>
