--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto">
+        xmlns:bind="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -8,6 +8,13 @@
             name="viewModel"
             type="com.framgia.feastival.screen.main.MainViewModel"/>
 
+        <variable
+            name="restaurantViewModel"
+            type="com.framgia.feastival.screen.main.restaurantdetail.RestaurantDetailViewModel"/>
+
+        <variable
+            name="createGroupViewModel"
+            type="com.framgia.feastival.screen.main.creategroup.CreateGroupViewModel"/>
     </data>
 
     <android.support.v4.widget.DrawerLayout
@@ -25,27 +32,29 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
 
-            <android.support.v4.widget.NestedScrollView
+            <android.support.design.widget.CoordinatorLayout
                 android:id="@+id/bottom_sheet"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dp_300"
                 android:background="@android:color/white"
                 android:clipToPadding="true"
-                android:orientation="vertical"
-                app:layout_behavior="@string/bottom_sheet_behavior">
+                bind:layout_behavior="@string/bottom_sheet_behavior">
 
-                <android.support.design.widget.CoordinatorLayout
+                <include
+                    layout="@layout/frame_restaurant_detail"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    app:state="@{viewModel}">
+                    bind:viewModel="@{restaurantViewModel}"
+                    />
 
-                    <include
-                        layout="@layout/frame_restaurant_detail"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        />
-                </android.support.design.widget.CoordinatorLayout>
-            </android.support.v4.widget.NestedScrollView>
+                <include
+                    layout="@layout/frame_group_create"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    bind:viewModel="@{createGroupViewModel}"
+                    />
+
+            </android.support.design.widget.CoordinatorLayout>
         </android.support.design.widget.CoordinatorLayout>
 
         <android.support.design.widget.NavigationView
@@ -54,8 +63,8 @@
             android:layout_height="match_parent"
             android:layout_gravity="start"
             android:background="@android:color/white"
-            app:headerLayout="@layout/header"
-            app:menu="@menu/drawer"
+            bind:headerLayout="@layout/header"
+            bind:menu="@menu/drawer"
             />
     </android.support.v4.widget.DrawerLayout>
 
