--- a/app/src/main/res/layout/frame_restaurant_detail.xml
+++ b/app/src/main/res/layout/frame_restaurant_detail.xml
@@ -10,13 +10,17 @@
             type="com.framgia.feastival.screen.main.restaurantdetail.RestaurantDetailViewModel"/>
 
         <import type="com.framgia.feastival.util.LayoutManagers"/>
+
+        <import type="android.view.View"/>
     </data>
 
     <LinearLayout
         android:id="@+id/linear_restaurant_detail"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:background="@android:color/white"
+        android:orientation="vertical"
+        android:visibility="@{viewModel.visibility ? View.VISIBLE : View.GONE}">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -46,19 +50,18 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
-                    android:layout_weight="1"
+                    android:layout_weight="2"
                     android:gravity="center_vertical"
                     android:text="@{viewModel.selectedRestaurant.title}"
                     android:textColor="@android:color/white"
-                    android:textSize="@dimen/sp_15"
-                    android:textStyle="bold"/>
+                    android:textSize="@dimen/sp_20"/>
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_marginLeft="@dimen/dp_10"
                     android:layout_marginStart="@dimen/dp_10"
-                    android:layout_weight="1"
+                    android:layout_weight="1.5"
                     android:gravity="center_vertical"
                     android:text="@{viewModel.selectedRestaurant.address}"
                     android:textColor="@android:color/white"
@@ -67,62 +70,74 @@
             </LinearLayout>
         </LinearLayout>
 
-        <TextView
+        <android.support.v4.widget.NestedScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/dp_20"
-            android:layout_marginLeft="@dimen/dp_10"
-            android:layout_marginStart="@dimen/dp_10"
-            android:maxLines="@integer/max_lines"
-            android:text="@{viewModel.selectedRestaurant.description}"
-            android:textColor="@android:color/black"
-            android:textSize="@dimen/sp_20"/>
+            android:layout_height="wrap_content">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/dp_10"
-            android:layout_marginLeft="@dimen/dp_10"
-            android:layout_marginStart="@dimen/dp_10"
-            android:drawableLeft="@drawable/ic_phone_call"
-            android:drawablePadding="@dimen/dp_15"
-            android:drawableStart="@drawable/ic_phone_call"
-            android:gravity="center_vertical"
-            android:text="@{viewModel.selectedRestaurant.phoneNumber}"
-            android:textColor="@android:color/holo_blue_light"
-            android:textSize="@dimen/sp_20"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/dp_20"
-            android:layout_marginLeft="@dimen/dp_10"
-            android:layout_marginStart="@dimen/dp_10"
-            android:drawableLeft="@drawable/ic_house"
-            android:drawablePadding="@dimen/dp_15"
-            android:drawableStart="@drawable/ic_house"
-            android:gravity="center_vertical"
-            android:text="@{viewModel.selectedRestaurant.website}"
-            android:textColor="@android:color/holo_blue_light"
-            android:textSize="@dimen/sp_20"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/dp_20"
+                    android:layout_marginLeft="@dimen/dp_10"
+                    android:layout_marginStart="@dimen/dp_10"
+                    android:maxLines="@integer/max_lines"
+                    android:text="@{viewModel.selectedRestaurant.description}"
+                    android:textColor="@android:color/black"
+                    android:textSize="@dimen/sp_20"/>
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/dp_5"
-            android:layout_marginLeft="@dimen/dp_15"
-            android:layout_marginStart="@dimen/dp_15"
-            android:text="@string/groups"
-            android:textColor="@android:color/black"
-            android:textSize="@dimen/sp_20"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/dp_10"
+                    android:layout_marginLeft="@dimen/dp_10"
+                    android:layout_marginStart="@dimen/dp_10"
+                    android:drawableLeft="@drawable/ic_phone_call"
+                    android:drawablePadding="@dimen/dp_15"
+                    android:drawableStart="@drawable/ic_phone_call"
+                    android:gravity="center_vertical"
+                    android:text="@{viewModel.selectedRestaurant.phoneNumber}"
+                    android:textColor="@android:color/holo_blue_light"
+                    android:textSize="@dimen/sp_20"/>
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/recycler_view"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            bind:adapter="@{viewModel.restaurantsGroupsAdapter}"
-            bind:layoutManager="@{LayoutManagers.grid(@integer/span_count)}"
-            />
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/dp_20"
+                    android:layout_marginLeft="@dimen/dp_10"
+                    android:layout_marginStart="@dimen/dp_10"
+                    android:drawableLeft="@drawable/ic_house"
+                    android:drawablePadding="@dimen/dp_15"
+                    android:drawableStart="@drawable/ic_house"
+                    android:gravity="center_vertical"
+                    android:text="@{viewModel.selectedRestaurant.website}"
+                    android:textColor="@android:color/holo_blue_light"
+                    android:textSize="@dimen/sp_20"/>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/dp_5"
+                    android:layout_marginLeft="@dimen/dp_15"
+                    android:layout_marginStart="@dimen/dp_15"
+                    android:text="@string/groups"
+                    android:textColor="@android:color/black"
+                    android:textSize="@dimen/sp_20"/>
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/recycler_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    bind:adapter="@{viewModel.restaurantsGroupsAdapter}"
+                    bind:layoutManager="@{LayoutManagers.grid(@integer/span_count)}"
+                    />
+            </LinearLayout>
+        </android.support.v4.widget.NestedScrollView>
+
     </LinearLayout>
 
 
